# rstorage

./: .env  Cargo.toml  Dockerfile  Dockerfile.test  PROTOCOL.md  README.md  docker-compose.yml  docker-entrypoint.sh  docker-test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: args.rs  controller.rs  lib.rs  log.rs  protocol_v1.rs  protocol_v2.rs  service.rs
tests/: test_protocol.rs
