[package]
name = "r-storage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "r-storage"
path = "src/bin/server.rs"

[[bin]]
name = "r-storage-cli"
path = "src/bin/client.rs"

[lib]
name = "r_storage"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
chrono = "0.4.44"
colored = "3.1.1"
dirs = "6.0.0"
dotenv = "0.15.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
sha2 = "0.10.9"
lazy_static = "1.5.0"
uuid = { version = "1.22.0", features = ["v4"] }
indicatif = "0.18.4"
rand = "0.10.0"
postcard = { version = "1.1.3", features = ["alloc"] }
# threadpool = "1.8.1"
# multer = "3.1.0"
# futures-util = "0.3.32"
# tokio-util = { version = "0.7.18", features = ["io"] }