[package]
name = "r-drive"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rdrive-server"
path = "src/bin/server.rs"

[[bin]]
name = "rdrive"
path = "src/bin/client.rs"

[lib]
name = "r_drive"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.release.package."*"]
opt-level = "z"
codegen-units = 1
strip = true
incremental = false
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
chrono = "0.4.44"
colored = "3.1.1"
dirs = "6.0.0"
dotenv = "0.15.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
sha2 = "0.10.9"
uuid = { version = "1.22.0", features = ["v4"] }
indicatif = "0.18.4"
rand = "0.10.0"
postcard = { version = "1.1.3", features = ["alloc"] }
# threadpool = "1.8.1"
# multer = "3.1.0"
# futures-util = "0.3.32"
# tokio-util = { version = "0.7.18", features = ["io"] }